# isodate

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: deploy.yml
src/isodate/: __init__.py  duration.py  isodatetime.py  isoduration.py  isotime.py  isotzinfo.py
src/isodate/tests/: test_date.py  test_pickle.py  test_strf.py
tests/: test_datetime.py  test_duration.py  test_pickle.py  test_strf.py  test_time.py
