[metadata]
name = isodate2
version = 0.7.0
author = Gerhard Weis
author_email = gerhard.weis@proclos.com
description = An ISO 8601 date/time/duration parser and formatter
license = BSD
url = https://github.com/isodate/isodate/
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages =
    isodate
    isodate.tests
package_dir = =src
install_requires = six
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[bdist_wheel]
universal = 1
