[metadata]
name = isodate2
version = 0.7.0
description = An ISO 8601 date/time/duration parser and formatter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isodate/isodate/
author = Gerhard Weis
author_email = gerhard.weis@proclos.com
license = BSD
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages =
    isodate
python_requires = >=3.6
package_dir = =src

[options.extras_require]
tests =
    pytest
    pytest-cov

[flake8]
max_line_length = 88
